--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "patch-package": "^8.0.0",
+    "patch-package": "^8.0.1",
     "typescript": "~5.9.2"
   },
   "overrides": {
-    "node-forge": "^1.3.2"
+    "node-forge": "^1.3.2",
+    "js-yaml": "^4.1.1",
+    "tmp": "^0.2.5"
   },
   "private": true
 }
